# zkp-chaum-pedersen

./: .gitignore  Cargo.toml  README.jp.md  README.md  build.rs
examples/: test_zero_values.rs
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs  zkp_auth.rs
