[package]
name = "zkp-chaum-pedersen"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # async rust runtime

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"
